# chat-mother-forker

./: .gitignore  README.md  pyproject.toml
src/chat_mother_forker/: __init__.py  checkpoint.py  current_chat.py  fork.py  models.py  search.py  server.py  truncate.py  turns.py
src/chat_mother_forker/providers/: __init__.py  base.py  claude_code.py  kiro_cli.py  kiro_ide.py  kiro_ide_v2.py
tests/: conftest.py  test_checkpoint.py  test_current_chat.py  test_fork.py  test_provider_claude_code.py  test_provider_kiro_cli.py  test_provider_kiro_ide.py  test_provider_kiro_ide_v2.py  test_search.py  test_truncate.py  test_turns.py
